syntax = "proto2";
package errorer;

option go_package = "github.com/guader/protogen/pb/errorer";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FileOptions {
    optional FileOptions fileOptions = 1332; // Extension number not registered yet.
}

extend google.protobuf.EnumOptions {
    optional EnumOptions enumOptions = 1332; // Extension number not registered yet.
}

extend google.protobuf.EnumValueOptions {
    optional Error err = 1332; // Extension number not registered yet.
}

message FileOptions {
    optional bool enable = 1;
    optional string suffix = 2;
}

message EnumOptions {
    optional bool enable = 1;
}

message Error {
    optional string message = 1;
}